# BattleShip

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  arena.cpp  arena.hpp  board.cpp  board.hpp  game.cpp  game.hpp  game_selection.cpp  game_selection.hpp  main.cpp  rules.cpp  rules.hpp  ship.hpp  src.pro
